--- a/rails-basics-ru/models/app/views/articles/index.html.erb
+++ b/rails-basics-ru/models/app/views/articles/index.html.erb
@@ -1,3 +1,5 @@
+<h1>Articles</h1>
+
 <% @articles.each do |article| %>
   <h1><%= article.title %></h1>
   <%= link_to "Read the article", article_path(article) %>
